# python-project-52

./: .gitignore  MANIFEST.in  Makefile  README.md  build.sh  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: my_workflow.yml
config/: settings.py  urls.py
statuses/: models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/: models.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
task_manager/migrations/: 0001_initial.py  0002_task_delete_users.py  0003_task_status.py  0004_alter_task_status.py
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  home.html  index.html
task_manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/templates/registration/: login.html
users/templates/users/: user_confirm_delete.html  user_form.html  user_list.html
(+8 files in other folders)
