[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-bootstrap5>=26.1",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "tree>=0.2.4",
    "whitenoise>=6.11.0",
]

[tool.setuptools.package-data]
"task_manager" = ["templates/**/*.html"]
"task_manager.users" = ["templates/users/*.html", "fixtures/*.json"]
"task_manager.statuses" = ["templates/statuses/*.html", "fixtures/*.json"]
"task_manager.tasks" = ["templates/tasks/*.html", "fixtures/*.json"]
"task_manager.labels" = ["templates/labels/*.html", "fixtures/*.json"]
